[package]
name = "ctap_hmac"
description = "A Rust implementation of the FIDO2 CTAP protocol, including the HMAC extension"
version = "0.1.1"
license = "Apache-2.0/MIT"
homepage = "https://github.com/ArdaXi/ctap/pull/2"
repository = "https://github.com/shimunn/ctap"
authors = ["Arda Xi <arda@ardaxi.com>", "shimun <shimun@shimun.net>"]
edition = "2018"

[dependencies]
rand = "0.6"
failure = "0.1"
failure_derive = "0.1"
num-traits = "0.2"
num-derive = "0.2"
byteorder = "1"
cbor-codec = "0.7"
ring = "0.13"
untrusted = "0.6"
rust-crypto = "0.2"
